--- a/Page2/page2.html
+++ b/Page2/page2.html
@@ -120,7 +120,7 @@
       
       <script src="script.js"></script>
     </body>
-    <div id = "footer">
+    <div id = >
       <footer></footer>
     </div>
     
